fixed a bug for longest subgraph

--- a/vignettes/amphibian_vignette.Rmd
+++ b/vignettes/amphibian_vignette.Rmd
@@ -93,7 +93,7 @@ max_subgraph(A.delicatus, A.deli_bound.null, projection = 4210)
 overlap_null_distrib() runs much like boundary_null_distrib(), but takes raster surfaces for two traits (x and y), along with arguments for each trait.
 
 ```{r}
-A.deli_overlap.null <- overlap_null_distrib(A.delicatus, A.delicatus_ecoregion, x_cat = T, y_cat = T, n_iterations = 100, projection = 4210, x_model = 'random_cluster', y_model = 'random_cluster', progress = F)
+A.deli_overlap.null <- overlap_null_distrib(A.delicatus, A.delicatus_ecoregion, rand_both = T, x_cat = T, n_iterations = 100, projection = 4210, x_model = 'random_cluster', progress = F)
 ```
 
 ### Run statistical tests
