addressed CRAN submission comments

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,8 +14,9 @@ BoundaryStats was designed to test for the presence of geographic boundaries in 
 
 ## Installation
 
-You can install BoundaryStats with:
+You can install BoundaryStats with either:
 ``` {r eval = F}
+install.packages('BoundaryStats')
 remotes::install_github("aluo734/BoundaryStats")
 ```
 
@@ -79,4 +80,4 @@ Oxy(Tcrist_boundaries, grassland_boundaries, Tcrist_ovlp_null)
 ```
 
 Data source:
-Cox, Karen; Schepers, Robbert; Van Breusegem, An; Speybroeck, Jeroen (2023), The common ground in landscape effects on gene flow in two newt species in an agroecosystem, Dryad, Dataset, https://doi.org/10.5061/dryad.bk3j9kdhz
+Cox, Karen; Schepers, Robbert; Van Breusegem, An; Speybroeck, Jeroen (2023), The common ground in landscape effects on gene flow in two newt species in an agroecosystem, Dryad, Dataset, https://doi.org/10.5061/dryad.bk3j9kdhz.
