--- a/vignettes/BoundaryStats.Rmd
+++ b/vignettes/BoundaryStats.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-This vignette is a walkthrough of the workflow for calculating boundary statistics and boundary overlap statistics for two ecological variables. This vignette uses East African ecoregion data and genomic analyses from Barratt et al. 2018. The following code tests for (1) whether there are significant geographic boundaries between genetic groups of the frog species *Leptopelis flavomaculatus* and (2) whether those boundaries overlap significantly with ecoregion boundaries.
+This vignette is a walkthrough of the workflow for calculating boundary statistics and boundary overlap statistics for two ecological variables. Here, we use East African ecoregion data and genomic analyses from Barratt et al. 2018. The following code tests for (1) whether there are significant geographic boundaries between genetic groups of the frog species *Leptopelis flavomaculatus* and (2) whether those boundaries overlap significantly with ecoregion boundaries.
 
 ## Load packages used in this vignette
 ```{r message = FALSE}
@@ -81,12 +81,12 @@ plot_boundary(L.flavomaculatus_boundaries, ecoregions_boundaries, trait_names = 
 
 ### Create null distributions
 
-The function boundary_null_distrib() simulates neutral landscapes based on the input data. The default number of iterations is 10, but a value between 100 and 1000 is recommended. This step may take a while, depending on the selected neutral model and number of iterations, so we are using 50 iterations.
+The function boundary_null_distrib() simulates neutral landscapes based on the input data. The default number of iterations is 10, but a value between 100 and 1000 is recommended. This step may take a while, depending on the selected neutral model and number of iterations, so we are maintaining the default 10 iterations.
 
 Three neutral models are currently available: complete stochasticity (default), Gaussian random fields, and modified random clusters. Random cluster models are suited to categorical variables like group identity (cat = T), so we use it here.
 
 ```{r}
-L.flav_bound.null <- boundary_null_distrib(L.flavomaculatus, cat = T, n_iterations = 50, model = 'random_cluster', p = 0.5, progress = F)
+L.flav_bound.null <- boundary_null_distrib(L.flavomaculatus, cat = T, n_iterations = 10, model = 'random_cluster', p = 0.5, progress = F)
 ```
 
 ### Run statistical tests
@@ -102,10 +102,10 @@ max_subgraph(L.flavomaculatus_boundaries, L.flav_bound.null)
 
 ### Create null distributions
 
-Usage for overlap_null_distrib is similar to boundary_null_distrib, but takes raster surfaces for two traits (x and y), along with arguments for each trait.
+Usage for overlap_null_distrib is similar to boundary_null_distrib, but takes raster surfaces for two traits (x and y), along with arguments for each trait. Since we are testing the effects of relatively static ecoregions on L. flavomaculatus population structure, we are not going to simulate randomized rasters for the ecoregions.
 
 ```{r}
-L.flav_overlap.null <- overlap_null_distrib(L.flavomaculatus, ecoregions, rand_both = F, x_cat = T, n_iterations = 50, x_model = 'random_cluster', px = 0.5, progress = F)
+L.flav_overlap.null <- overlap_null_distrib(L.flavomaculatus, ecoregions, rand_both = F, x_cat = T, n_iterations = 10, x_model = 'random_cluster', px = 0.5, progress = F)
 ```
 
 ### Run statistical tests
