revisions for manuscript

--- a/README.Rmd
+++ b/README.Rmd
@@ -30,23 +30,23 @@ library(kableExtra)
 
 stat_functions <- tibble(Function = character(), Category = character(), Description = character())
 
-stat_functions[1,1] <- 'n_subgraph'
+stat_functions[1,1] <- 'n_boundaries'
 stat_functions[1,2] <- 'Boundary'
 stat_functions[1,3] <- 'The number of subgraphs, or sets of contiguous boundary elements, in the data.'
 
-stat_functions[2,1] <- 'max_subgraph'
+stat_functions[2,1] <- 'longest_boundary'
 stat_functions[2,2] <- 'Boundary'
 stat_functions[2,3] <- 'The length of the longest subgraph.'
 
-stat_functions[3,1] <- 'Odirect'
+stat_functions[3,1] <- 'n_overlap_boundaries'
 stat_functions[3,2] <- 'Boundary Overlap'
-stat_functions[3,3] <- 'The number of directly overlapping boundary elements, or raster cells labelled as part of a boundary, of two traits.'
+stat_functions[3,3] <- 'The number of directly overlapping boundary elements, or raster cells labeled as part of a boundary, of two traits.'
 
-stat_functions[4,1] <- 'Ox'
+stat_functions[4,1] <- 'average_min_x_to_y'
 stat_functions[4,2] <- 'Boundary Overlap'
 stat_functions[4,3] <- 'The average minimum distance between each boundary element in raster x and the nearest boundary element in raster y. Uses Euclidean distance. The boundaries of trait x depend on the boundaries of trait y.'
 
-stat_functions[5,1] <- 'Oxy'
+stat_functions[5,1] <- 'average_min_distance'
 stat_functions[5,2] <- 'Boundary Overlap'
 stat_functions[5,3] <- 'The average minimum distance between boundary elements in two raster layers. Uses Euclidean distance. Boundaries for each trait affect one another reciprocally (x affects y and y affects x).'
 
@@ -60,23 +60,30 @@ kable(stat_functions) %>%
 library(BoundaryStats)
 library(tidyverse)
 
-data(T.cristatus)
-T.cristatus <- terra::rast(T.cristatus_matrix, crs = T.cristatus_crs)
-ext(T.cristatus) <- T.cristatus_ext
+data(ecoregions)
+ecoregions <- terra::rast(ecoregions_matrix, crs = ecoregions_crs)
+terra::ext(ecoregions) <- ecoregions_ext
 
-data(grassland)
-grassland <- terra::rast(grassland_matrix, crs = grassland_crs)
-ext(grassland) <- grassland_ext
+data(L.flavomaculatus)
+L.flavomaculatus <- terra::rast(L.flavomaculatus_matrix, crs = L.flavomaculatus_crs)
+terra::ext(L.flavomaculatus) <- L.flavomaculatus_ext
 
-Tcrist_boundaries <- categorical_boundary(T.cristatus)
-grassland_boundaries <- define_boundary(grassland, threshold = 0.1)
-plot_boundary(Tcrist_boundaries, grassland_boundaries)
+terra::crs(ecoregions) <- terra::crs(L.flavomaculatus)
+ecoregions <- terra::resample(ecoregions, L.flavomaculatus) |>
+  terra::crop(L.flavomaculatus) |>
+  terra::mask(L.flavomaculatus)
+L.flavomaculatus <- terra::crop(L.flavomaculatus, ecoregions) |>
+  terra::mask(ecoregions)
 
-Tcrist_ovlp_null <- overlap_null_distrib(T.cristatus, grassland, rand_both = FALSE, x_cat = T, n_iterations = 100, x_model = 'random_cluster')
+L.flavomaculatus_boundary <- define_boundary(L.flavomaculatus, cat = TRUE)
+ecoregions_boundary <- define_boundary(ecoregions, cat = T)
+plot_boundary(L.flavomaculatus, ecoregions)
 
-Odirect(Tcrist_boundaries, grassland_boundaries, Tcrist_ovlp_null)
-Ox(Tcrist_boundaries, grassland_boundaries, Tcrist_ovlp_null)
-Oxy(Tcrist_boundaries, grassland_boundaries, Tcrist_ovlp_null)
+Tcrist_ovlp_null <- overlap_null_distrib(L.flavomaculatus, ecoregions, rand_both = FALSE, x_cat = T, n_iterations = 100, x_model = 'random_cluster')
+
+n_overlap_boundaries(L.flavomaculatus, ecoregions, Tcrist_ovlp_null)
+average_min_x_to_y(L.flavomaculatus, ecoregions, Tcrist_ovlp_null)
+average_min_distance(L.flavomaculatus, ecoregions, Tcrist_ovlp_null)
 ```
 
 Data source:
