--- a/vignettes/BoundaryStats.Rmd
+++ b/vignettes/BoundaryStats.Rmd
@@ -22,7 +22,6 @@ This vignette is a walkthrough of the workflow for calculating boundary statisti
 ```{r message = FALSE}
 library(BoundaryStats)
 library(terra)
-library(magrittr)
 ```
 
 ## Input data
@@ -51,37 +50,37 @@ In order to test for significant overlap between the traits, the SpatRaster obje
 
 ```{r}
 crs(ecoregions) <- crs(L.flavomaculatus)
-ecoregions <- resample(ecoregions, L.flavomaculatus) %>%
-  crop(., L.flavomaculatus) %>%
-  mask(., L.flavomaculatus)
-L.flavomaculatus <- crop(L.flavomaculatus, ecoregions) %>%
-  mask(., ecoregions)
+ecoregions <- resample(ecoregions, L.flavomaculatus) |>
+  crop(L.flavomaculatus) |>
+  mask(L.flavomaculatus)
+L.flavomaculatus <- crop(L.flavomaculatus, ecoregions) |>
+  mask(ecoregions)
 ```
 
 ## Define trait boundaries and ecoregion boundaries
 
-There are two functions to define geographical boundaries in BoundaryStats, which take different data. The function define_boundary() takes either continuous trait data and boundary intensities. If inputting continuous trait data, use convert = T to convert from trait data into boundaries. If inputting boundary intensity data (e.g., urbanization metrics if urban land uses are boundaries), use convert = F to define boundaries based on an intensity threshold.
+There are two functions to define geographical boundaries in BoundaryStats, which take different data. The function `define_boundary` takes either continuous trait data and boundary intensities. If inputting continuous trait data, use `convert = TRUE` to convert from trait data into boundaries. If inputting boundary intensity data (e.g., urbanization metrics if urban land uses are boundaries), use `convert = FALSE` to define boundaries based on an intensity threshold.
 
-The two datasets in this vignette are categorical--ecoregion and genetic group identity--so we are using the other boundary definition function, categorical_boundary() to identify spatial transitions from one category to another.
+The two datasets in this vignette are categorical--ecoregion and genetic group identity--so we are using the other boundary definition function, `categorical_boundary` to identify spatial transitions from one category to another.
 
 ```{r fig.width = 8, fig.height = 6}
-ecoregions_boundaries <- categorical_boundary(ecoregions)
-L.flavomaculatus_boundaries <- categorical_boundary(L.flavomaculatus)
+ecoregions_boundaries <- define_boundary(ecoregions, cat = T)
+L.flavomaculatus_boundaries <- define_boundary(L.flavomaculatus, cat = T)
 ```
 
 ## Plot boundary overlap
 
-The overlap in boundaries between two variables can be plotted using the plot_boundary() function, which is a wrapper for ggplot2.
+The overlap in boundaries between two variables can be plotted using the `plot_boundary` function, which is a wrapper for ggplot2. If `output_raster = TRUE`, the function will return a SpatRaster object with a single layer containing boundary elements for each trait and cells with overlapping boundary elements.
 
 ```{r warning = FALSE, fig.width = 8, fig.height = 6}
-plot_boundary(L.flavomaculatus_boundaries, ecoregions_boundaries, trait_names = c('A. delicatus genetic group', 'Ecoregion'))
+plot_boundary(L.flavomaculatus_boundaries, ecoregions_boundaries, trait_names = c('A. delicatus genetic group', 'Ecoregion'), output_raster = F)
 ```
 
 ## Calculate boundary statistics
 
 ### Create null distributions
 
-The function boundary_null_distrib() simulates neutral landscapes based on the input data. The default number of iterations is 10, but a value between 100 and 1000 is recommended. This step may take a while, depending on the selected neutral model and number of iterations, so we are maintaining the default 10 iterations.
+The function `boundary_null_distrib` simulates neutral landscapes based on the input data. The default number of iterations is 10, but a value between 100 and 1000 is recommended. This step may take a while, depending on the selected neutral model and number of iterations, so we are maintaining the default 10 iterations.
 
 Three neutral models are currently available: complete stochasticity (default), Gaussian random fields, and modified random clusters. Random cluster models are suited to categorical variables like group identity (cat = T), so we use it here.
 
@@ -91,18 +90,18 @@ L.flav_bound.null <- boundary_null_distrib(L.flavomaculatus, cat = T, n_iteratio
 
 ### Run statistical tests
 
-n_subgraph is the number of subgraphs (i.e., contiguous groups of cells representing boundaries), and max_subgraph is the length of the longest subgraph.
+`n_boundaries` is the number of boundaries (i.e., contiguous groups of cells representing boundaries), and `longest_boundary` is the length of the longest subgraph.
 
 ```{r}
-n_subgraph(L.flavomaculatus_boundaries, L.flav_bound.null)
-max_subgraph(L.flavomaculatus_boundaries, L.flav_bound.null)
+n_boundaries(L.flavomaculatus_boundaries, L.flav_bound.null)
+longest_boundary(L.flavomaculatus_boundaries, L.flav_bound.null)
 ```
 
 ## Calculate boundary overlap statistics
 
 ### Create null distributions
 
-Usage for overlap_null_distrib is similar to boundary_null_distrib, but takes raster surfaces for two traits (x and y), along with arguments for each trait. Since we are testing the effects of relatively static ecoregions on L. flavomaculatus population structure, we are not going to simulate randomized rasters for the ecoregions.
+Usage for `overlap_null_distrib` is similar to `boundary_null_distrib`, but takes raster surfaces for two traits (x and y), along with arguments for each trait. Since we are testing the effects of relatively static ecoregions on *L. flavomaculatus* population structure, we are not going to simulate randomized rasters for the ecoregions.
 
 ```{r}
 L.flav_overlap.null <- overlap_null_distrib(L.flavomaculatus, ecoregions, rand_both = F, x_cat = T, n_iterations = 10, x_model = 'random_cluster', px = 0.5, progress = F)
@@ -110,12 +109,12 @@ L.flav_overlap.null <- overlap_null_distrib(L.flavomaculatus, ecoregions, rand_b
 
 ### Run statistical tests
 
-Odirect is the number of directly overlapping boundary elements between the two variables. Ox is the average minimum distance for a a Trait x boundary element to the nearest Trait y boundary element. It assumes that boundaries for Trait x depend on the boundaries in Trait y. Oxy is the average minimum distance between boundary elements in x and y (x and y affect each other reciprocally).
+`n_overlap_boundaries` is *O<sub>d</sub>*, the number of directly overlapping boundary elements between the two variables.`average_min_x_to_y` is *O<sub>x</sub>*, the average minimum distance for a a Trait x boundary element to the nearest Trait y boundary element. It assumes that boundaries for Trait x depend on the boundaries in Trait y. `average_min_distance` is *O<sub>xy</sub>*, the average minimum distance between boundary elements in x and y (x and y affect each other reciprocally).
 
 ```{r}
-Odirect(L.flavomaculatus_boundaries, ecoregions_boundaries, L.flav_overlap.null)
-Ox(L.flavomaculatus_boundaries, ecoregions_boundaries, L.flav_overlap.null)
-Oxy(L.flavomaculatus_boundaries, ecoregions_boundaries, L.flav_overlap.null)
+n_overlap_boundaries(L.flavomaculatus_boundaries, ecoregions_boundaries, L.flav_overlap.null)
+average_min_x_to_y(L.flavomaculatus_boundaries, ecoregions_boundaries, L.flav_overlap.null)
+average_min_distance(L.flavomaculatus_boundaries, ecoregions_boundaries, L.flav_overlap.null)
 ```
 
 ## Citation
